fix: improve readability

--- a/frontend/src/assets/stylesheets/pages/resume.css
+++ b/frontend/src/assets/stylesheets/pages/resume.css
@@ -308,7 +308,7 @@ body[location="resume"] main .container .main aside.sidebar section h2 {
     border: none !important;
     background: white !important;
     display: block !important;
-    font-size: 9.7pt;
+    font-size: 9pt;
     line-height: 1.3;
   }
 
@@ -442,6 +442,7 @@ body[location="resume"] main .container .main aside.sidebar section h2 {
     margin: 0;
     padding: 0;
     font-size: 1em;
-    line-height: 1.15;
+    line-height: 1.3;
+    word-spacing: 0.1em;
   }
 }
